--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-            <h2 class="logo">CAREER <img src="icons/globeg.png"></h2>
+            <h2 class="logo">CAREER <img src="globeg.png"></h2>
             <ul class="navigation">
                 <a href="home.html">Home</a>
                 <a href="home.html">Guidance</a>
