--- a/adminlog.html
+++ b/adminlog.html
@@ -8,7 +8,7 @@
   <body>
     <div class="bkgnd">
       <header>
-        <h2 class="logo">CAREER<img src="icons/globeg.png" /></h2>
+        <h2 class="logo">CAREER<img src="globeg.png" /></h2>
         <nav class="navigation">
           <button
             class="btnLogin-popup"
@@ -23,13 +23,13 @@
         <form>
           <div class="linput_field">
             <div class="det">
-              <span class="icon"> <img src="icons/mail.png" /></span>
+              <span class="icon"> <img src="mail.png" /></span>
               <input type="email" name="aemail" /><label for="aemail"
                 >email</label
               >
             </div>
             <div class="det">
-              <span class="icon"> <img src="icons/padlock1.png" /></span>
+              <span class="icon"> <img src="padlock1.png" /></span>
               <input type="password" name="apassword" /><label for="apassword"
                 >password</label
               >
