--- a/adminreg.html
+++ b/adminreg.html
@@ -7,7 +7,7 @@
   <body>
     <div class="bkgnd">
       <header>
-        <h2 class="logo">CAREER<img src="icons/globeg.png" /></h2>
+        <h2 class="logo">CAREER<img src="globeg.png" /></h2>
         <nav class="navigation">
           <button
             class="btnLogin-popup"
@@ -22,43 +22,43 @@
         <form>
           <div class="input_field">
             <div class="detl">
-              <span class="icon"> <img src="icons/id.png" /></span>
+              <span class="icon"> <img src="id.png" /></span>
               <input type="text" name="afirstname" /><label for="firstname"
                 >firstname</label
               >
             </div>
             <div class="detail">
-              <span class="icon"> <img src="icons/id.png" /></span>
+              <span class="icon"> <img src="id.png" /></span>
               <input type="text" name="alastname" /><label for="lastname"
                 >lastname</label
               >
             </div>
             <div class="det">
-              <span class="icon"> <img src="icons/user.png" /></span>
+              <span class="icon"> <img src="user.png" /></span>
               <input type="text" name="ausername" /><label for="ausername"
                 >Username</label
               >
             </div>
             <div class="det">
-              <span class="icon"> <img src="icons/phbk.png" /></span>
+              <span class="icon"> <img src="phbk.png" /></span>
               <input type="tel" name="aphoneno" /><label for="phone no"
                 >phone no</label
               >
             </div>
             <div class="det">
-              <span class="icon"> <img src="icons/mail.png" /></span>
+              <span class="icon"> <img src="mail.png" /></span>
               <input type="email" name="aemail" /><label for="aemail"
                 >email</label
               >
             </div>
             <div class="det">
-              <span class="icon"> <img src="icons/padlock1.png" /></span>
+              <span class="icon"> <img src="padlock1.png" /></span>
               <input type="password" name="apassword" /><label for="apassword"
                 >password</label
               >
             </div>
             <div class="det">
-              <span class="icon"> <img src="icons/login.png" /></span>
+              <span class="icon"> <img src="login.png" /></span>
               <input type="password" name="aconfirmpassword" /><label
                 for="aconfirmpassword"
                 >confirm password</label
