--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-            <h2 class="logo">CAREER<img src="icons/globeg.png"></h2>
+            <h2 class="logo">CAREER<img src="globeg.png"></h2>
             <ul class="navigation">
                 <a href="#home">Home</a>
                 <a href="#guidance">Guidance</a>
@@ -32,8 +32,8 @@
                     </div>
                     <div class="tablemain">
                         <div class="id"><text>Developed by</text></div><br>
-                            <idbox1 class="logoo"><img src="icons/man1.png">Tiwari Suyash</idbox1>
-                            <idbox2 class="logoo"><img src="icons/man2.png">Jagtap Yash</idbox2>
+                            <idbox1 class="logoo"><img src="man1.png">Tiwari Suyash</idbox1>
+                            <idbox2 class="logoo"><img src="man2.png">Jagtap Yash</idbox2>
                     </div><br><br><br><br><br><br><br>
                     <div class="id"><text>Other courses from  us</text></div><br>
 
