--- a/ulogin.html
+++ b/ulogin.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <h2 class="logo">CAREER<img src="icons/globeg.png" /></h2>
+      <h2 class="logo">CAREER<img src="globeg.png" /></h2>
       <nav class="navigation">
         <button
           class="btnLogin-popup"
@@ -22,13 +22,13 @@
         <h2>Login</h2>
         <form action="#">
           <div class="input-box">
-            <span class="icon"> <img src="icons/email.png" /></span>
+            <span class="icon"> <img src="email.png" /></span>
             <input type="email" name="email" required />
             <label for="email">Email</label>
           </div>
 
           <div class="input-box">
-            <span class="icon"> <img src="icons/padlock.png" /></span>
+            <span class="icon"> <img src="padlock.png" /></span>
             <input type="password" name="password" required />
             <label for="password">Password</label>
           </div>
