--- a/uregistration.html
+++ b/uregistration.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <h2 class="logo">CAREER<img src="icons/globeg.png" /></h2>
+      <h2 class="logo">CAREER<img src="globeg.png" /></h2>
       <nav class="navigation">
         <button
           class="btnLogin-popup"
@@ -22,19 +22,19 @@
         <h2>Registeration</h2>
         <form action="backend.php" method="post">
           <div class="input-box">
-            <span class="icon"> <img src="icons/user1.png" /></span>
+            <span class="icon"> <img src="user1.png" /></span>
             <input type="text" name="username" required />
             <label for="username">Username</label>
           </div>
 
           <div class="input-box">
-            <span class="icon"> <img src="icons/email.png" /></span>
+            <span class="icon"> <img src="email.png" /></span>
             <input type="email" name="email" required />
             <label for="email">Email</label>
           </div>
 
           <div class="input-box">
-            <span class="icon"> <img src="icons/padlock.png" /></span>
+            <span class="icon"> <img src="padlock.png" /></span>
             <input type="password" name="password" required />
             <label for="password">Password</label>
           </div>
